--- a/app/src/main/res/layout/activity_flitering_page.xml
+++ b/app/src/main/res/layout/activity_flitering_page.xml
@@ -476,7 +476,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/lightGray"
+        android:background="@color/white"
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/applyBtn">
 
