--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -8,12 +8,11 @@
     tools:context=".ProductPage">
 
     <LinearLayout
-        android:id="@+id/backgroundContainer"
+        android:id="@+id/backgroundpagetitle"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/lightGray"
+        android:background="@color/white"
         android:gravity="center"
-
         >
 
         <TextView
@@ -22,11 +21,167 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Enchanté"
-            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:layout_marginTop="5dp"
             />
+    </LinearLayout>
+
+   <ScrollView
+       android:id="@+id/contentsv"
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       app:layout_constraintTop_toBottomOf="@id/backgroundpagetitle"
+       app:layout_constraintBottom_toTopOf="@id/bottomLinear">
+
+    <LinearLayout
+        android:id="@+id/contentbackground"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="0dp"
+        android:background="@color/lightGray">
+
+        <TextView
+            android:id="@+id/mains"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="Mains"
+            android:textColor="@color/fortexts"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+
+        <ImageButton
+            android:id="@+id/carbonara"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintStart_toStartOf="@id/mains"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/pastacarbonara" />
+
+        <ImageButton
+            android:id="@+id/bolognese"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintStart_toStartOf="@id/carbonara"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/pastabolognese" />
+
+        <ImageButton
+            android:id="@+id/lasagna"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintStart_toStartOf="@id/bolognese"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/lasagna" />
+
+        <ImageButton
+            android:id="@+id/aglioolio"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintStart_toStartOf="@id/lasagna"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/aglioolio" />
+
+        <ImageButton
+            android:id="@+id/macncheese"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintStart_toStartOf="@id/aglioolio"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/macncheese" />
+
+        <TextView
+            android:id="@+id/pizza"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="Pizza"
+            android:textColor="@color/fortexts"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+   </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/bottomLinear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/contentsv"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+        <ImageButton
+            android:id="@+id/home"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:padding="20dp"
+            android:layout_marginLeft="10dp"
+            app:srcCompat="@drawable/home"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            />
+        <ImageButton
+            android:id="@+id/order"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:padding="20dp"
+            android:layout_marginLeft="10dp"
+            app:srcCompat="@drawable/order"
+            android:scaleType="fitCenter"
+            android:background="@android:color/transparent"
+            />
+
+        <ImageButton
+            android:id="@+id/favourites"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:padding="20dp"
+            android:layout_marginLeft="10dp"
+            app:srcCompat="@drawable/favourite"
+            android:scaleType="fitCenter"
+            android:background="@android:color/transparent"
+            />
+
+        <ImageButton
+            android:id="@+id/account"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="80dp"
+            android:padding="20dp"
+            android:layout_marginLeft="10dp"
+            app:srcCompat="@drawable/account"
+            android:scaleType="fitCenter"
+            android:background="@android:color/transparent"
+            />
 
     </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
