--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="lightBrown">#b6a593</color>
+    <color name="lightBrown">#eed6c2</color>
     <color name="lightGray">#e2d9cd</color>
+    <color name="fortexts">#656565</color>
 </resources>
