--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -90,7 +90,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="noodle"
+                    android:text="$12.50"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                     android:textStyle="bold"
@@ -106,6 +106,8 @@
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
+                       android:layout_marginTop="15dp"
+                       android:layout_marginLeft="120dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/minusicon"
@@ -115,9 +117,8 @@
                        android:id="@+id/tv_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:layout_marginLeft="10dp"
-                       android:layout_marginRight="10dp"
-                       android:text="1"
+                       android:layout_marginTop="30dp"
+                       android:text="0"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
 
@@ -127,16 +128,13 @@
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:scaleType="fitCenter"
+                       android:layout_marginTop="15dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/plusicon"
                        android:background="@color/lightGray"/>
 
                </LinearLayout>
-
             </LinearLayout>
-
-
-
         </LinearLayout>
 
         <ImageButton
