--- a/app/src/main/res/layout/activity_flitering_page.xml
+++ b/app/src/main/res/layout/activity_flitering_page.xml
@@ -463,7 +463,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="1dp"
-        android:background="@drawable/button_background"
+        android:background="@color/white"
         android:gravity="center"
         android:text="Apply"
         android:textColor="@color/black"
@@ -487,17 +487,18 @@
         app:layout_constraintTop_toBottomOf="@+id/applyBtn">
 
 
+
         <ImageButton
             android:id="@+id/home"
-            android:layout_width="94dp"
+            android:layout_width="90dp"
             android:layout_height="80dp"
+            android:padding="20dp"
             android:layout_marginLeft="10dp"
+            app:srcCompat="@drawable/home"
+            android:scaleType="fitCenter"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
             android:contentDescription="Pasta Image"
-            android:padding="20dp"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/home"
 
             />
 
