--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,9 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="100dp"
         android:layout_marginBottom="100dp"
-        android:background="@drawable/button_background"
+        android:backgroundTint="@color/black"
         android:text="Start Now!!"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
