--- a/app/src/main/res/layout/activity_productpage.xml
+++ b/app/src/main/res/layout/activity_productpage.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Foodlistactivity">
+    tools:context=".productpage">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
