--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -5,100 +5,79 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login_Page">
+    tools:context=".Login_Page"
+    android:background="@drawable/background"
+    >
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:textSize="20sp"
-        android:text="Login"
         android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_username"
-        android:layout_width="140dp"
-        android:layout_height="40dp"
-        android:layout_marginRight="250dp"
-        android:layout_marginBottom="50dp"
-        android:text="Username:"
-        android:textSize="24sp"
+        android:backgroundTint="#D5702B"
+        android:text="Login"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/et_password" />
 
-    <TextView
-        android:id="@+id/tv_password"
-        android:layout_width="140dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="250dp"
-        android:text="Password:"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_username" />
 
     <EditText
         android:id="@+id/et_username"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginBottom="60dp"
-        android:ems="10"
+        android:background="@drawable/jason_customedittext"
+        android:ems="16"
         android:inputType="text"
+        android:layout_marginTop="50dp"
+        android:text="Username:"
+        android:drawableStart="@drawable/person_logo"
+        android:drawablePadding="5dp"
+        android:paddingStart="10dp"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_username"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginRight="60dp"
-        android:ems="10"
-        android:inputType="text|textPassword"
+        android:background="@drawable/jason_customedittext"
+        android:ems="16"
+        android:inputType="text"
+        android:layout_marginTop="20dp"
+        android:text="Password:"
+        android:drawableStart="@drawable/lock_logo"
+        android:drawablePadding="5dp"
+        android:paddingStart="10dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_password"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_username" />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginBottom="100dp"
         android:text="Sign In"
         android:textSize="60sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imagev_logo"
-        android:layout_width="134dp"
-        android:layout_height="97dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
         android:id="@+id/tv_signuptext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
+        android:layout_marginRight="100dp"
         android:text="Don't have an account?"
         android:textSize="16sp"
-        android:layout_marginRight="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,6 +87,7 @@
         android:id="@+id/tv_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
         android:layout_marginRight="80dp"
         android:text="Sign Up Here!"
         android:textColor="#03A9F4"
@@ -117,5 +97,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_signuptext"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+
+    <ImageView
+        android:id="@+id/mainLogo"
+        android:layout_width="411dp"
+        android:layout_height="500dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/mainlogo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
