--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -38,7 +38,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_Logintitle" />
 
     <EditText
         android:id="@+id/et_password"
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_username" />
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_Logintitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
