--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -20,48 +20,84 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
-    <TextView
-        android:id="@+id/tvMains"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="Mains"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintTop_toBottomOf="@id/productpagetitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-
     <ScrollView
         android:id="@+id/productpagesv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tvMains"
+        app:layout_constraintTop_toBottomOf="@id/productpagetitle"
         app:layout_constraintBottom_toTopOf="@id/bottomLinear"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/productpagerv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            />
-    </ScrollView>
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvPizza"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="Pizza"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintTop_toBottomOf="@id/productpagesv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+            <TextView
+                android:id="@+id/tvMains"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="Mains"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_marginLeft="15dp"
+                app:layout_constraintTop_toBottomOf="@id/productpagetitle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/productpagerv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                />
+
+            <TextView
+                android:id="@+id/tvPizza"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Pizza"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_marginLeft="15dp"
+                android:paddingTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/productpagerv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/pizzapagerv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                />
+
+            <TextView
+                android:id="@+id/tvAppetizer"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Appetizer"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_marginLeft="15dp"
+                android:paddingTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/pizzapagerv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/appetizerpagerv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                />
+
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/bottomLinear"
