--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -27,25 +27,39 @@
         app:layout_constraintTop_toBottomOf="@id/productpagetitle"
         app:layout_constraintBottom_toTopOf="@id/bottomLinear"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/background"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvMains"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:text="Mains"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:layout_marginLeft="15dp"
-                app:layout_constraintTop_toBottomOf="@id/productpagetitle"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvMains"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:text="Mains"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="15dp" />
+
+                <Button
+                    android:id="@+id/filterbutton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sort By"
+
+                    />
+
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/productpagerv"
@@ -91,6 +105,69 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/appetizerpagerv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                />
+
+            <TextView
+                android:id="@+id/tvSidedish"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Side Dish"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_marginLeft="15dp"
+                android:paddingTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/appetizerpagerv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/sidedishpagerv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                />
+
+            <TextView
+                android:id="@+id/tvDessert"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Dessert"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_marginLeft="15dp"
+                android:paddingTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/sidedishpagerv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/dessertpagerv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                />
+
+            <TextView
+                android:id="@+id/tvBeverage"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Beverage"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_marginLeft="15dp"
+                android:paddingTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/dessertpagerv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/beveragepagerv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="vertical"
