--- a/app/src/main/res/layout/custom_productlist.xml
+++ b/app/src/main/res/layout/custom_productlist.xml
@@ -3,54 +3,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="0dp">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="215dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:layout_marginLeft="5dp">
-
-        <ImageView
-            android:id="@+id/ivImage"
-            android:layout_width="match_parent"
-            android:layout_height="215dp"
-            android:layout_weight="1"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/pastacarbonara"
-            app:layout_constraintDimensionRatio="1:1"
-            />
-
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvName"
+            <ImageView
+                android:id="@+id/ivImage"
+                android:layout_width="match_parent"
+                android:layout_height="215dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/pastacarbonara" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:paddingTop="8dp" />
-            <TextView
-                android:id="@+id/tvPrice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Price"
-                android:textSize="18sp"
-                android:paddingTop="4dp"
-                android:paddingBottom="20dp"/>
+                android:orientation="vertical"
+                android:padding="5dp">
 
+                <TextView
+                    android:id="@+id/tvName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:paddingTop="8dp" />
+
+                <TextView
+                    android:id="@+id/tvPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Price"
+                    android:textSize="18sp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="20dp"/>
+            </LinearLayout>
         </LinearLayout>
-
-
-    </LinearLayout>
-
-
-
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
