--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -56,7 +56,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sort By"
-
+                    android:layout_marginRight="20dp"
+                    android:backgroundTint="@color/green"
                     />
 
             </LinearLayout>
