edit custom layout

--- a/app/src/main/res/layout/custom_productlist.xml
+++ b/app/src/main/res/layout/custom_productlist.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp">
+        app:cardElevation="4dp"
+        android:clickable="false"
+        android:focusable="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +49,7 @@
 
                     <TextView
                         android:id="@+id/tvPrice"
-                        android:layout_width="50dp"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:text="Price"
                         android:textSize="18sp"
@@ -55,6 +57,7 @@
                         android:paddingBottom="20dp"/>
 
                     <ImageButton
+                        android:id="@+id/btnIncrease"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         app:srcCompat = "@drawable/plusicon"
@@ -70,16 +73,18 @@
                         android:layout_marginTop="4dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:text="1"
+                        android:text="0"
                         android:textSize="18sp" />
 
                     <ImageButton
+                        android:id="@+id/btnDecrease"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         app:srcCompat = "@drawable/minusicon"
                         android:scaleType="fitCenter"
                         android:padding="8dp"
-                        android:background="@color/white"/>
+                        android:background="@color/white"
+                        />
 
                 </LinearLayout>
             </LinearLayout>
