--- a/app/src/main/res/layout/activity_flitering_page.xml
+++ b/app/src/main/res/layout/activity_flitering_page.xml
@@ -450,7 +450,7 @@
                 android:layout_width="90dp"
                 android:layout_height="80dp"
                 android:padding="20dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 app:srcCompat="@drawable/account"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
