--- a/app/src/main/res/layout/custom_productlist.xml
+++ b/app/src/main/res/layout/custom_productlist.xml
@@ -24,7 +24,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="215dp"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/pastacarbonara" />
+                app:srcCompat="@drawable/pastacarbonara"
+                android:onClick="showFoodDetail"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,7 +40,8 @@
                     android:text="Name"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:paddingTop="8dp" />
+                    android:paddingTop="8dp"
+                    />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
