working on points page

--- a/app/src/main/res/layout/activity_points_page.xml
+++ b/app/src/main/res/layout/activity_points_page.xml
@@ -5,64 +5,83 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Points_Page">
+    tools:context=".Points_Page"
+    android:background="@drawable/background">
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:progressBackgroundTint="@android:color/holo_green_dark"
+        android:progressTint="@android:color/holo_orange_dark"
         android:layout_width="193dp"
-        android:layout_height="68dp"
+        android:layout_height="20dp"
+        android:progress="60"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="80dp" />
+        app:layout_constraintTop_toBottomOf="@+id/currentTier" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/currentTier"
+        android:textSize="50sp"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="xx points to [next tier] tier"
+        android:text="Bronze tier"
+        android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="52dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Current tier"
+        android:text="40 points to Silver tier"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="40dp" />
+        app:layout_constraintTop_toBottomOf="@+id/currentTier" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/redeemVouchersText"
+        android:textSize="30sp"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="redeem vouchers"
+        android:text="Redeem Vouchers"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="187dp" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewVouchers"
         android:layout_width="408dp"
         android:layout_height="516dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="219dp" />
+        android:padding="16dp"
+        android:scrollbars="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/redeemVouchersText" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/pointsCount"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="no. of points"
-        tools:layout_editor_absoluteX="328dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:text="60 pts"
+        android:layout_margin="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_revert"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
+<!--    <ImageButton-->
+<!--        android:id="@+id/imageButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:srcCompat="@android:drawable/ic_menu_revert"-->
+<!--        tools:layout_editor_absoluteX="16dp"-->
+<!--        tools:layout_editor_absoluteY="16dp" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
