Added Firebase Stuff

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -31,7 +31,7 @@
         android:ems="16"
         android:inputType="text"
         android:layout_marginTop="50dp"
-        android:text="Username:"
+        android:hint="Username:"
         android:drawableStart="@drawable/person_logo"
         android:drawablePadding="5dp"
         android:paddingStart="10dp"
@@ -48,7 +48,7 @@
         android:ems="16"
         android:inputType="text"
         android:layout_marginTop="20dp"
-        android:text="Password:"
+        android:hint="Password:"
         android:drawableStart="@drawable/lock_logo"
         android:drawablePadding="5dp"
         android:paddingStart="10dp"
@@ -102,7 +102,9 @@
         android:id="@+id/mainLogo"
         android:layout_width="411dp"
         android:layout_height="500dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/mainlogo" />
