--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -29,7 +29,7 @@
         android:ems="16"
         android:inputType="text"
         android:layout_marginTop="50dp"
-        android:text="Username:"
+        android:hint="Username:"
         android:drawableStart="@drawable/person_logo"
         android:drawablePadding="5dp"
         android:paddingStart="10dp"
@@ -49,7 +49,7 @@
         android:ems="16"
         android:inputType="text"
         android:paddingStart="10dp"
-        android:text="Password:"
+        android:hint="Password:"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +63,7 @@
         android:ems="16"
         android:inputType="text"
         android:layout_marginTop="20dp"
-        android:text="Email:"
+        android:hint="Email:"
         android:drawableStart="@drawable/email_logo"
         android:drawablePadding="5dp"
         android:paddingStart="10dp"
