--- a/app/src/main/res/layout/custom_cart_item.xml
+++ b/app/src/main/res/layout/custom_cart_item.xml
@@ -35,7 +35,7 @@
 
                 <TextView
                     android:id="@+id/tvName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="400dp"
                     android:layout_height="wrap_content"
                     android:text="Name"
                     android:textSize="20sp"
@@ -45,12 +45,20 @@
 
                 <TextView
                     android:id="@+id/tvPrice"
-                    android:layout_width="90dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Price"
                     android:textSize="18sp"
                     android:paddingTop="4dp"
                     android:paddingBottom="20dp"/>
+
+                <TextView
+                    android:id="@+id/tvQuantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:text="Quantity"
+                    android:textColor="@color/black" />
 
             </LinearLayout>
         </LinearLayout>
