--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -12,6 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/background"
         >
 
@@ -39,6 +42,7 @@
             android:padding="0dp"
             android:layout_marginTop="40dp"
             android:scaleType="centerInside"
+            android:contentDescription="filter button"
             />
 
     </LinearLayout>
@@ -194,7 +198,8 @@
             android:background="@android:color/transparent"
             android:padding="20dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/home" />
+            app:srcCompat="@drawable/home"
+            android:contentDescription="home button"/>
 
         <ImageButton
             android:id="@+id/order"
@@ -205,7 +210,8 @@
             android:background="@android:color/transparent"
             android:padding="20dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/order" />
+            app:srcCompat="@drawable/order"
+            android:contentDescription="order button"/>
 
         <ImageButton
             android:id="@+id/favourites"
@@ -216,7 +222,8 @@
             android:background="@android:color/transparent"
             android:padding="20dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/favourite" />
+            app:srcCompat="@drawable/favourite"
+            android:contentDescription="favorites button"/>
 
         <ImageButton
             android:id="@+id/account"
@@ -227,7 +234,8 @@
             android:background="@android:color/transparent"
             android:padding="20dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/account" />
+            app:srcCompat="@drawable/account"
+            android:contentDescription="account button"/>
 
     </LinearLayout>
 
@@ -241,9 +249,9 @@
         android:tint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/bottomLinear"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/productpagesv"
         app:layout_constraintVertical_bias="1.0"
         app:maxImageSize="100dp"
-        app:fabCustomSize="100dp" />
+        app:fabCustomSize="100dp"
+        android:contentDescription="cart button"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
