--- a/app/src/main/res/layout/custom_cart_item.xml
+++ b/app/src/main/res/layout/custom_cart_item.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/ivImage"
+                android:id="@+id/ivcartImage"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
@@ -34,7 +34,7 @@
                 android:padding="5dp">
 
                 <TextView
-                    android:id="@+id/tvName"
+                    android:id="@+id/tvcartName"
                     android:layout_width="400dp"
                     android:layout_height="wrap_content"
                     android:text="Name"
@@ -44,7 +44,7 @@
                     />
 
                 <TextView
-                    android:id="@+id/tvPrice"
+                    android:id="@+id/tvcartPrice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Price"
@@ -53,7 +53,7 @@
                     android:paddingBottom="20dp"/>
 
                 <TextView
-                    android:id="@+id/tvQuantity"
+                    android:id="@+id/tvcartQuantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
